examples/test/testpolicy12426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12426
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key33: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value0
          key49: value13
          key7: value2
      podSelector:
        matchLabels:
          key8: value17
          key35: value30
          key18: value7
